--- a/ansible/roles/hhvm/tasks/main.yml
+++ b/ansible/roles/hhvm/tasks/main.yml
@@ -1,9 +1,12 @@
 - name: add hhvm apt-key
-  apt_key: url=http://dl.hhvm.com/conf/hhvm.gpg.key state=present
+  apt_key: keyserver=hkp://keyserver.ubuntu.com:80 id=0x5a16e7281be7a449 state=present
   sudo: yes
 
+- shell: lsb_release -sc
+  register: ubuntu_release_code_name
+
 - name: add hhvm deb
-  apt_repository: repo="deb http://dl.hhvm.com/ubuntu trusty main"
+  apt_repository: repo="deb http://dl.hhvm.com/ubuntu {{ ubuntu_release_code_name.stdout }} main"
   sudo: yes
 
 - name: install hhvm
